--- a/config/dropbox.yml
+++ b/config/dropbox.yml
@@ -1,6 +1,6 @@
-app_key: "8y8ps0f45haw9sv"
+app_key: "6915dbt0yek9wsz"
 app_secret: <%= ENV["APP_SECRET"] %>
-access_token: "zgxhgmzmkz7oke8q"
+access_token: "utvhr8r9fe9qmdly"
 access_token_secret: <%= ENV["ACCESS_TOKEN_SECRET"] %>
 user_id: "72645625"
 access_type: "app_folder"
